fix: Patch expo-modules-core build.gradle directly

--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -71,30 +71,30 @@ jobs:
             echo "✅ Added to gradle.properties"
           fi
           
-          # Patch root build.gradle to configure all subprojects
-          if [ -f android/build.gradle ]; then
-            # Check if we already added the fix
-            if ! grep -q "suppressKotlinVersionCompatibilityCheck" android/build.gradle; then
-              # Add subprojects configuration at the end using echo
-              echo "" >> android/build.gradle
-              echo "subprojects {" >> android/build.gradle
-              echo "    afterEvaluate { project ->" >> android/build.gradle
-              echo "        if (project.hasProperty(\"android\") && project.plugins.hasPlugin(\"org.jetbrains.kotlin.android\")) {" >> android/build.gradle
-              echo "            try {" >> android/build.gradle
-              echo "                project.android {" >> android/build.gradle
-              echo "                    composeOptions {" >> android/build.gradle
-              echo "                        compiler {" >> android/build.gradle
-              echo "                            suppressKotlinVersionCompatibilityCheck = true" >> android/build.gradle
-              echo "                        }" >> android/build.gradle
-              echo "                    }" >> android/build.gradle
-              echo "                }" >> android/build.gradle
-              echo "            } catch (Exception e) {" >> android/build.gradle
-              echo "                // Ignore if composeOptions not available" >> android/build.gradle
-              echo "            }" >> android/build.gradle
-              echo "        }" >> android/build.gradle
-              echo "    }" >> android/build.gradle
-              echo "}" >> android/build.gradle
-              echo "✅ Patched root build.gradle"
+          # Directly patch expo-modules-core build.gradle (the module causing the issue)
+          # Add composeOptions to the android block
+          if [ -f node_modules/expo-modules-core/android/build.gradle ]; then
+            if ! grep -q "suppressKotlinVersionCompatibilityCheck" node_modules/expo-modules-core/android/build.gradle; then
+              # Find the android block and insert composeOptions before its closing brace
+              # Use awk to insert before the last } in the android block
+              awk '
+                /^[[:space:]]*android[[:space:]]*\{/ { in_android=1; android_depth=1 }
+                in_android && /\{/ { android_depth++ }
+                in_android && /\}/ { 
+                  android_depth--
+                  if (android_depth == 0) {
+                    print "    composeOptions {"
+                    print "        compiler {"
+                    print "            suppressKotlinVersionCompatibilityCheck = true"
+                    print "        }"
+                    print "    }"
+                    in_android=0
+                  }
+                }
+                { print }
+              ' node_modules/expo-modules-core/android/build.gradle > /tmp/expo-build.gradle && \
+              mv /tmp/expo-build.gradle node_modules/expo-modules-core/android/build.gradle
+              echo "✅ Patched expo-modules-core/android/build.gradle"
             fi
           fi
           
